fixed layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f3ba2f;
 }
 
 a {
@@ -20,6 +21,11 @@ a {
   flex-direction: row;
 }
 
+.flex-c {
+  display: flex;
+  flex-direction: column;
+}
+
 .flex-r-c {
   display: flex;
   flex-direction: row;
@@ -30,6 +36,10 @@ a {
 .img-box{
   height: 200px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .img-box img{
@@ -41,8 +51,13 @@ a {
 /* (A) TABS CONTAINER */
 .tab {
   position: relative;
-  min-width: 600px;
+  min-width: 400px;
   max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  margin: 0 auto;
 }
 
 /* (B) HIDE CHECKBOX */
@@ -53,11 +68,13 @@ a {
   display: block;
   /* flex-direction: row; */
   margin-top: 10px;
-  padding: 10px;
+  padding: 1rem;
   color: #fff;
   font-weight: bold;
+  border-radius: 50px;
   background: #1A2025;
   cursor: pointer;
+  
 }
 
 /* (D) TAB CONTENT */
@@ -79,21 +96,21 @@ a {
   content: "\25b6";
   position: absolute;
   right: 10px;
-  top: 10px;
+  top: 20px;
   display: block;
   transition: all 0.4s;
 }
 .tab input:checked ~ label::after { transform: rotate(90deg); }
 
 .address{
-  background: #f3ba2f;
+  background: #1A2025;
   border: 1px solid #f0b5c3;
   border-radius: 30px;
   padding: 10px 10px 10px 25px;
   max-width: 630px;
   min-width: 600px;
   width: 100%;
-  color: rgb(0, 0, 0);
+  color: #f3ba2f;
   box-shadow: 0 9px 50px -10px #000;
 
 }
